# Spacevec

./: .clangd  CMakeLists.txt  README.md  conanfile.txt  shell.nix
assets/: fragment.glsl  vertex.glsl
src/: main.cpp  renderer.cpp  renderer.h
